--- a/css/style.css
+++ b/css/style.css
@@ -197,10 +197,23 @@ body {
     color: white;
     transition: 0.5s;
     padding-bottom: 20px;
+    position: relative;
 }
 
-.sectionlink:hover {
-    border-bottom: 2px solid white;
+.sectionlink::after {
+    content: "";
+    position: absolute;
+    bottom: -1px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 0%;
+    height: 2px;
+    background: white;
+    transition: 0.5s;
+}
+
+.sectionlink:hover.sectionlink::after {
+    width: 100%;
 }
 
 .section__cards {
@@ -226,6 +239,11 @@ body {
     flex-direction: column;
     gap: 15px;
     padding: 15px;
+}
+
+
+.card__img {
+    transition: 0.5s;
 }
 
 .card__h {
